GNOME Bugzilla – Bug 703910
Entering then leaving Party Mode breaks the app menu; Party Mode status incorrectly reported
Last modified: 2016-06-13 22:28:21 UTC
* Start Rhythmbox * On the app menu, click View -> Party Mode * Now on the gear menu that appears in Party Mode, go to View and note that Party Mode is not checked. It should be. * Click on Party Mode and you do properly leave fullscreen. * On the app menu, click View. All of the View options are missing! This is 100% reproducible in the sense that I did it six times in a row five minutes ago. I haven't gotten a broken app menu since; I don't know why. But I can still trivially get the gear menu and app menu to incorrectly display party mode status. The gear menu should only ever show party mode as on, and the app menu should only show it as off, but this is not the case.
(In reply to comment #0) > * Start Rhythmbox > * On the app menu, click View -> Party Mode > * Now on the gear menu that appears in Party Mode, go to View and note that > Party Mode is not checked. It should be. I see this bit > * Click on Party Mode and you do properly leave fullscreen. > * On the app menu, click View. All of the View options are missing! Not this bit.
Yeah, I just cannot reproduce it at all anymore. I don't know what changed; it was really consistent at first.
Tested with the stable 3.0 release just now, and the first part of the bug can still be reproduced. The three ways (appmenu toggle, gear menu toggle, and the F11 key) to change this state are not synced with each other. The "whole view submenu disappears" thing is not reproducible though.
Created attachment 254751 [details] Video demonstrating broken View menu I was able to reproduce it again twice just now (rhythmbox-2.99.1-1.fc19)
Still happens with 3.3.1.
Created attachment 328260 [details] [review] shell: Fix state of the "Party Mode" toggle item The "Party Mode" menu item is a toggle menu item. If we only listen to the "activate" signal, we'll listen for clicks, but we won't change the state. So when the gear menu appears, the old state would be shown. Listen to the state change instead, and update the action state. http://bugzilla.gnome.org/show_bug.cgi?id=703910
Only problem being that the whole "View" section is unsensitive after switching off party mode, but that might be a gnome-shell or GLib bug, not sure. 1. rhythmbox git + the patch above, and run it in gnome-shell 2. select "Party Mode" in the app menu -> View 3. de-select "Party Mode" in the gear menu -> View 4. "Party Mode" in the app menu -> View (and the other items) look disabled...
Review of attachment 328260 [details] [review]: one minor question, but this looks good and works for me. ::: shell/rb-shell.c @@ +2417,3 @@ { + shell->priv->party_mode = g_variant_get_boolean (parameter); + g_simple_action_set_state (G_SIMPLE_ACTION (action), g_variant_new_boolean (shell->priv->party_mode)); why not just pass 'parameter' here?
Created attachment 328392 [details] [review] shell: Fix state of the "Party Mode" toggle item The "Party Mode" menu item is a toggle menu item. If we only listen to the "activate" signal, we'll listen for clicks, but we won't change the state. So when the gear menu appears, the old state would be shown. Listen to the state change instead, and update the action state. http://bugzilla.gnome.org/show_bug.cgi?id=703910
Review of attachment 328392 [details] [review]: ok
Review of attachment 328392 [details] [review]: pushed as commit 8f196bb